<resources>
    <string name="app_name">Core 3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="icon">icon</string>
    <string name="UNStudents">UN Students</string>
    <string name="_11_08_23_12_00">11/08/23 12:00</string>
    <string name="ef403">EF403</string>
    <string name="filter">filter</string>
    <string name="cultural">Cultural</string>
    <string name="sport">Sport</string>
    <string name="tech">Tech</string>
    <string name="politics">Politics</string>
    <string name="all">All</string>
</resources>