<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/filter"
        android:id="@+id/search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/filter">
        <menu>
            <item android:id="@+id/all"
                android:title="@string/all"/>
            <item android:id="@+id/cultural"
                android:title="@string/cultural"/>
            <item android:id="@+id/sport"
                android:title="@string/sport"/>
            <item android:id="@+id/tech"
                android:title="@string/tech"/>
            <item android:id="@+id/politics"
                android:title="@string/politics"/>
        </menu>
    </item>
</menu>